tests/jtrrouter/errors/sinks/tri.netccfg
<?xml version="1.0" encoding="UTF-8"?>

<configuration xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:noNamespaceSchemaLocation="http://sumo.dlr.de/xsd/netconvertConfiguration.xsd">

    <input>
        <node-files value="../../tri.nod.xml"/>
        <edge-files value="../../tri.edg.xml"/>
    </input>

    <output>
        <output-file value="input_net.net.xml"/>
    </output>

    <processing>
        <no-internal-links value="true"/>
    </processing>

    <report>
        <verbose value="true"/>
    </report>

</configuration>
